--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,12 +1,13 @@
 * {
     font-family: 'Press Start 2P', cursive;
     font-weight: 100;
+    user-select: none;
 }
 
 body {
     /* background-color: black; */
     /* z-index: -10; */
-    background-image: url("../assets/Space.png");
+    background-image: url("../assets/images/Space.png");
     background-position: left;
     background-repeat: repeat;
     color: white;
