--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,3 +1,34 @@
+::-webkit-scrollbar {
+    width: .5em;
+    height: 1rem;
+}
+
+::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0.21);
+    backdrop-filter: blur(1rem);
+    /* border: 2px solid var(--softwhite); */
+    margin-top: auto;
+    margin-right: 50px;
+    /* border-radius: 100vh; */
+}
+
+::-webkit-scrollbar-track:hover {
+    /* box-shadow: inset 0px 0px 10px #0e0e0e; */
+    cursor: pointer;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgb(230, 230, 230);
+    border: 1px solid #909090;
+    /* border-radius: 100vh; */
+    cursor: pointer;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    box-shadow: inset 0px 0px 5px rgb(32, 32, 32);
+    cursor: pointer;
+}
+
 * {
     font-family: 'Press Start 2P', cursive;
     font-weight: 100;
