Added better background and adjusted it to look good on every page

--- a/src/css/leaderboards.css
+++ b/src/css/leaderboards.css
@@ -1,3 +1,15 @@
+.leaderboardBG {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-image: url("../assets/images/Space.png");
+    background-position: center;
+    background-repeat: repeat;
+    z-index: -100;
+}
+
 .leaderboardHeader {
     width: 100%;
     text-align: center;
