--- a/src/css/bestiary.css
+++ b/src/css/bestiary.css
@@ -1,3 +1,15 @@
+.bestiaryBG {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-image: url("../assets/images/Space_bestiary.png");
+    background-position: center;
+    background-repeat: repeat;
+    z-index: -100;
+}
+
 .bestiaryHeader {
     width: 100%;
     text-align: center;
