--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,3 +1,15 @@
+.homeBG {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-image: url("../assets/images/Space_home.png");
+    background-position: center;
+    background-repeat: repeat;
+    z-index: -100;
+}
+
 .shipArea {
     position: fixed;
     height: 100%;
