--- a/src/css/shop.css
+++ b/src/css/shop.css
@@ -1,3 +1,15 @@
+.shopBG {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-image: url("../assets/images/Space_shop.png");
+    background-position: center;
+    background-repeat: repeat;
+    z-index: -100;
+}
+
 .topPanel {
     width: 100%;
     
