--- a/client/src/css/login.css
+++ b/client/src/css/login.css
@@ -33,6 +33,8 @@
     font-family: 'Press Start 2P', cursive;
     font-weight: 100;
     user-select: none;
+    text-decoration: none;
+    color: white;
 }
 
 body {
@@ -181,7 +183,7 @@ body {
     font-size: 16px;
 }
 
-#submitLogin {
+.loginBtn, .signupBtn {
     font-size: 30px;
     text-align: center;
     width: 100%;
