--- a/client/src/css/leaderboards.css
+++ b/client/src/css/leaderboards.css
@@ -13,7 +13,7 @@
 .leaderboardHeader {
     width: 100%;
     text-align: center;
-    font-size: 45px;
+    font-size: min(45px, 8vw);
     color: #ffb74a;
 }
 
@@ -55,9 +55,57 @@
 }
 
 .scoringSection {
-    width: 70%;
+    width: 80%;
     height: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    overflow-y: scroll;
 }
+
+.scoreRow {
+    width: 100%;
+    height: 10%;
+    /* background-color: red; */
+    color: white;
+    text-align: center;
+    font-size: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: no-wrap;
+}
+
+.scoreRowPiece {
+    margin: 5px;
+}
+
+.MID {
+    width: 100%;
+    border-bottom: dashed 2px white;
+    margin-bottom: -1px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media screen and (max-width: 600px) {
     .leaderboardPanelHolder {
