--- a/client/src/css/bestiary.css
+++ b/client/src/css/bestiary.css
@@ -22,6 +22,23 @@
     text-align: center;
 }
 
+.returnHome {
+    font-size: 22px;
+    color: rgb(36, 27, 117);
+    transition: all 100ms ease-in-out;
+    width: 100%;
+    text-align: center;
+}
+
+.returnHome:hover {
+    font-size: 24px;
+    color: rgb(55, 38, 201);
+}
+
+.returnHome:active {
+    transform: translate(2px);
+}
+
 .bestiaryPanelHolder {
     width: 100vw;
     height: fit-content;
